--- a/TaskGenX/paperTaskGenX.tex
+++ b/TaskGenX/paperTaskGenX.tex
@@ -35,9 +35,9 @@
 
 %%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%
-\section{Related Work}
-\label{sec:related}
-\input{TaskGenX/06-related}
+%\section{Related Work}
+%\label{sec:related}
+%\input{TaskGenX/06-related}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
