written evaluation for RTS

--- a/References/references.bib
+++ b/References/references.bib
@@ -1133,3 +1133,21 @@ volume={28},
 number={7}, 
 pages={2074-2087}, 
 }
+
+@article{Lineage,
+  title = {{Lineage2: Revolution}},
+  author = {{NCSOFT Corp. Netmarble Corp. and Netmarble Neo Inc.}},
+  url ={{http://l2.netmarble.com}}
+}
+
+@article{KOG,
+  title = {{King of Glory (Arena of Valor)}},
+  author = {{Tencent Games}},
+  url ={{https://www.arenaofvalor.com}}
+}
+
+@article{Dynasty,
+  title = {{Dynasty Warriors}},
+  author = "KOEI TECMO GAMES CO., LTD",
+  url ={{http://www.koeitecmoamerica.com}}
+}
