--- a/bigLittlePARSEC/paperPARSEC.tex
+++ b/bigLittlePARSEC/paperPARSEC.tex
@@ -1,5 +1,5 @@
 \chapter{Study of Asymmetric Systems}
-
+\label{chapter.study}
 This chapter presents an initial thorough study of scheduling on different levels of the software stack on an asymmetric multi-core (AMC) system. 
 We evaluate how ready are HPC applications to move to an asymmetric environment taking into account performance and energy consumption. 
 We compare scheduling approaches on the application, OS and runtime system levels.
