--- a/References/references.bib
+++ b/References/references.bib
@@ -341,11 +341,10 @@ year = {2011}
 }
 
 @misc{BAR,
-  title = {{Barcelona Application Repository}},
+  title = {{BSC Application Repository}},
   author = {{Barcelona Supercomputing Center}},
   url ={{https://pm.bsc.es/projects/bar}},
 }
-
 
 @inproceedings{StarSs,
  author = {Duran, Alejandro and Perez, Josep M. and Ayguad{\'e}, Eduard and Badia, Rosa M. and Labarta, Jesus},
@@ -726,7 +725,7 @@ article{samsung,
 @misc{EAS,
   Title = {{Scheduler Options in big.LITTLE Android Platforms}},
   Author = {Mike Anderson},
-%  howpublished ={\url{http://events.linuxfoundation.org/sites/events/files/slides/GTS_Anderson.pdf}},
+  howpublished ={\url{http://events.linuxfoundation.org/sites/events/files/slides/GTS_Anderson.pdf}},
   year={2015}
 }
 
@@ -1112,6 +1111,31 @@ doi={10.1109/TC.2013.205},
 ISSN={0018-9340}
 }
 
+@misc{MKL,
+  title = {{Reference Manual for Intel Math Kernel Library 11.1 }},
+  author = {{Intel Corporation}},
+  institution = { },
+  url ={https://software.intel.com/en-us/intel-mkl}
+}
+
+@misc{Lineage,
+  title = {{Lineage2: Revolution}},
+  author = {{NCSOFT Corp. Netmarble Corp. and Netmarble Neo Inc.}},
+  url ={{http://l2.netmarble.com}}
+}
+
+@article{KOG,
+  title = {{King of Glory (Arena of Valor)}},
+  author = {{Tencent Games}},
+  url ={{https://www.arenaofvalor.com}}
+}
+
+@article{Dynasty,
+  title = {{Dynasty Warriors}},
+  author = "KOEI TECMO GAMES CO., LTD",
+  url ={{http://www.koeitecmoamerica.com}}
+}
+
 @article{Li5,
 title = "Multi-objective scheduling of many tasks in cloud platforms ",
 journal = "Future Generation Computer Systems ",
@@ -1134,20 +1158,12 @@ number={7},
 pages={2074-2087}, 
 }
 
-@article{Lineage,
-  title = {{Lineage2: Revolution}},
-  author = {{NCSOFT Corp. Netmarble Corp. and Netmarble Neo Inc.}},
-  url ={{http://l2.netmarble.com}}
-}
-
-@article{KOG,
-  title = {{King of Glory (Arena of Valor)}},
-  author = {{Tencent Games}},
-  url ={{https://www.arenaofvalor.com}}
-}
-
-@article{Dynasty,
-  title = {{Dynasty Warriors}},
-  author = "KOEI TECMO GAMES CO., LTD",
-  url ={{http://www.koeitecmoamerica.com}}
+@article{AMC_survey,
+author = {Mittal, Sparsh},
+year = {2016},
+month = {02},
+pages = {},
+title = {A Survey Of Techniques for Architecting and Managing Asymmetric Multicore Processors},
+volume = {48},
+booktitle = {ACM Computing Surveys}
 }
