--- a/conclusion.tex
+++ b/conclusion.tex
@@ -36,3 +36,9 @@ Since a part of this work is already complete, we expect that our goals will be 
 %~\\ \\
 %As a novel approach, we can see the obstacle that lies beyond. Identifying the degree of approximation, realizing the right type of approximation, the applicability of the techniques 
 %etc. all are still big questions. Yet with a right mindset and the progress we already have we are confident towards this approach.
+
+
+
+\section{Future Directions}
+
+TaskGenX+CATS
