--- a/scheduling/paperScheduling.tex
+++ b/scheduling/paperScheduling.tex
@@ -1,5 +1,5 @@
 \chapter{Task-Based Scheduling Solutions}
-
+\label{chapter.scheduling}
 In the previous chapter we showed that the most efficient way to utilize an AMC with HPC applications is by performing scheduling in the runtime system level, i.e. using a parallel programmind model.
 In this capter our goal is to enhance the current parallel programming models and make them more efficient when it comes to AMCs.
 
